Basic file loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,19 @@
-project(Musec)
 cmake_minimum_required(VERSION 2.8.9)
-
-find_package(Qt5Widgets REQUIRED)
-find_package(Qt5Multimedia REQUIRED)
+project(Musec)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
+find_package(Qt5Widgets REQUIRED)
+find_package(Qt5Multimedia REQUIRED)
+
 set(HEADERS
-	Musec.h
+    Musec.h
 )
 
 set(CPPFILES
     main.cpp
-	Musec.cpp
+    Musec.cpp
 )
 
 set(RESOURCES
@@ -31,7 +31,9 @@ set(QT_RESOURCES
 qt5_wrap_ui(Musec_UI ${QT_FORMS})
 qt5_add_resources(Musec_RES ${QT_RESOURCES})
 
-add_executable(Musec ${CPPFILES} ${RESOURCES}
-    ${HEADERS} ${Musec_UI} ${Musec_RES})
+add_executable(Musec WIN32 ${HEADERS} ${CPPFILES} ${RESOURCES}
+    ${Musec_UI} ${Musec_RES})
+
+target_link_libraries(Musec Qt5::WinMain)
 
 qt5_use_modules(Musec Widgets Multimedia)
